test/resources/typer/failing/HOFValueAsFunction.amy
object HOFValueAsFunction
  val x: Int(32) = 5;
  val y: Int(32) = x(10) // x is an Int, not a function
end HOFValueAsFunction